engine/tests/detection_corpus/bad/secret_stripe_pub.js
const pk = "pk_live_51NxYzABCdefGHIjklMNOpqr98765";
